# LearningNashQLearning

./: .gitignore  Application.ipynb  BuildPackage.ipynb  MegaDemo.ipynb  MultiPlayerTest.ipynb  README.md  data_structures.py  requirements.txt
Algorithm/: BasicAlgorithm.ipynb
Graphs/: FinalGraph.ipynb  GraphRep3.ipynb  GraphRepresentation.ipynb
Interface/: AlgorithmDemo.ipynb  EditableMatrixDemo.ipynb  FinalDisplay.ipynb  GameEditorDemo.ipynb  InteractiveGraph.ipynb  NumberInputDemo.ipynb  PlayerSelectionDemo.ipynb  test.ipynb
Interface/Classes/: EditableMatrix.py  EnvGraphDisplay.py  FinalDisplay.py  GameEditor.ipynb  GameEditor.py  GraphClass.py  GraphPlotter.py  NashQLearning.py  NumberInput.py  PayoffSelection.py  PlayerSelection.py  (+2 more)
LearningNashQLearning/: README.md  pyproject.toml  setup.py
LearningNashQLearning.egg-info/: PKG-INFO  SOURCES.txt
LearningNashQLearning/LearningNashQLearning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
LearningNashQLearning/LearningNashQLearning/Model/: Agent.py  Environment.py  History.py  NashQLearning.py
LearningNashQLearning/LearningNashQLearning/View/: EnvGraphDisplay.py  FinalDisplay.py  GameEditor.py  GraphClass.py  GridDisplay.py  NashQLearningWidgets.py  PresetGames.py
Model/: Agent.py  Environment.py  History.py  NashQLearning.py  testing_gambit.ipynb
NashFinderTestNotebooks/: NashFinderLibraryTest.ipynb  NashFinderPuLP.ipynb  NashFinderTest2.ipynb
Notebooks/: MegaDemo.ipynb  test.ipynb
Prototype/: prototype.ipynb
Tests/: Algorithm_tests.ipynb  Algorithm_tests_gambit.ipynb
(+3 files in other folders)
