# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LearningNashQLearning"
version = "0.1"
description = "A simple NashQ-learning implementation in Python"
readme = "README.md"
authors = [{ name = "Paolo Ginefra" }, { name = "Federico Rocca"}, { name = "Andrea Tarabotto" }]
requires-python = ">=3.9"